# anything-cli

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  start-all.sh
ag-cli/: Cargo.toml
ag-cli/src/: main.rs
bindings/: check-data-across-crm-csv.csv.yaml  check-data-across-crm-csv.postgres.yaml  crm-example.mongodb.yaml  crm-payroll-access.csv.yaml  crm-payroll-access.postgres.yaml  crm_customer_relationship.mongodb.yaml  crm_customer_relationship.postgres.yaml  customer_conversation.mongodb.yaml  customer_conversation.postgres.yaml  mongo-crm-identity-audit.mongodb.yaml  mongo-crm-identity-audit.postgres.yaml  mongo_postgres_playbook.mongodb.yaml  mongo_postgres_playbook.postgres.yaml  pg-mongo-transaction-ontology.mongodb.yaml  postgres-user-mongo-transactions.mongodb.yaml  postgres-user-mongo-transactions.postgres.yaml  postgres.yaml  salesforce-lead-access.salesforce.yaml  salesforce.yaml  simple-crm-access.postgres.yaml  testing.mongodb.yaml  testing.postgres.yaml  user-transaction-access.mongodb.yaml  user-transaction-access.postgres.yaml
cli/: README.md  install.sh  package.json
cli/src/: index.js
cli/src/commands/: mcp.js  onboard.js  sourceAdd.js  sourceRemove.js  sources.js  start.js  status.js  stop.js
cli/src/lib/: daemon.js  envFile.js  health.js  paths.js  prerequisites.js  profileStore.js  reasoningApi.js  rustBinaries.js  sourceAdapters.js  sourceRows.js  supervisor.js  version.js
crates/adapter-core/: Cargo.toml
crates/adapter-core/src/: authoring.rs  lib.rs
crates/adapter-csv/: AGENTS.md  Cargo.toml
crates/adapter-csv/examples/: binding.yaml
crates/adapter-csv/src/: authoring.rs  lib.rs
crates/adapter-mongodb/: AGENTS.md  Cargo.toml
crates/adapter-mongodb/examples/: binding.yaml
crates/adapter-mongodb/src/: authoring.rs  lib.rs
crates/adapter-rest/: AGENTS.md  Cargo.toml
crates/adapter-rest/examples/: binding.yaml
crates/adapter-rest/src/: authoring.rs  lib.rs
crates/adapter-soql/: AGENTS.md  Cargo.toml
crates/adapter-soql/examples/: binding.yaml
crates/adapter-soql/src/: authoring.rs  introspect.rs  lib.rs  sample.rs
crates/adapter-sql/: AGENTS.md  Cargo.toml
crates/adapter-sql/src/: authoring.rs  engine.rs  introspect.rs  lib.rs  sample.rs
crates/binding-spec/: Cargo.toml
crates/binding-spec/src/: compile.rs  lib.rs  normalize.rs  read_only.rs
crates/plan-compiler/: Cargo.toml
crates/plan-compiler/src/: lib.rs
crates/plan-ir/: Cargo.toml
crates/plan-ir/src/: lib.rs
crates/playbook-spec/: Cargo.toml
crates/playbook-spec/src/: lib.rs  normalize.rs
crates/proof/: Cargo.toml
crates/proof/src/: lib.rs
crates/rebac/: Cargo.toml
crates/rebac/src/: evaluator.rs  graph.rs  lib.rs  loader.rs  materialize.rs  subject.rs  types.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: adapter_guides.rs  federation.rs  lib.rs  rebac_enforce.rs
data/: README.md  payroll.csv
docs/: playbook-structure.md
mcp/: package-lock.json  package.json
mcp/src/: auth.ts  http.ts  index.ts  reasoningClient.ts  serverCore.ts
playbooks/: README.md  check-data-across-crm-csv.json  crm-example.json  crm-payroll-access.json  crm_customer_relationship.json  cross-source-identity-audit.json  customer-access.json  customer_conversation.json  mongo-crm-identity-audit.json  mongo_postgres_playbook.json  pg-mongo-transaction-ontology.json  postgres-user-mongo-transactions.json  sales-compensation-access.json  salesforce-lead-access.json  simple-crm-access.json  testing.json  user-transaction-access.json
profiles/: local.yaml
reasoning-service/: Cargo.toml
reasoning-service/src/: auth.rs  main.rs
scripts/: seed_postgres_demo_data.py
