[package]
name = "anythinggraph-ag"
description = "AnythingGraph thin-layer CLI (validate, test, serve)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ag"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
plan-compiler = { workspace = true }
plan-ir = { workspace = true }
playbook-spec = { workspace = true }
runtime = { workspace = true }
