[package]
name = "reasoning-service"
description = "HTTP API for the AnythingGraph thin reasoning layer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "reasoning-service"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
binding-spec = { workspace = true }
plan-compiler = { workspace = true }
plan-ir = { workspace = true }
playbook-spec = { workspace = true }
proof = { workspace = true }
runtime = { workspace = true }
