[package]
name = "adapter-core"
description = "Data adapter trait and registry for federated playbook queries"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
binding-spec = { workspace = true }
plan-ir = { workspace = true }
