[package]
name = "adapter-csv"
description = "CSV file adapter for federated playbook queries"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
csv = "1.3"
serde = { workspace = true }
serde_json = { workspace = true }
adapter-core = { workspace = true }
binding-spec = { workspace = true }
plan-ir = { workspace = true }
