[package]
name = "adapter-mongodb"
description = "MongoDB adapter for federated playbook queries"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
mongodb = "3.2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
adapter-core = { workspace = true }
binding-spec = { workspace = true }
plan-ir = { workspace = true }
