[package]
name = "adapter-rest"
description = "REST/HTTP JSON adapter for federated playbook queries"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
urlencoding = "2"
adapter-core = { workspace = true }
binding-spec = { workspace = true }
plan-ir = { workspace = true }
