[package]
name = "adapter-sql"
description = "SQL adapter for federated playbook queries"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
adapter-core = { workspace = true }
binding-spec = { workspace = true }
plan-ir = { workspace = true }
