[package]
name = "rebac"
description = "Relationship-based access control for ag-cli playbooks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
playbook-spec = { workspace = true }
binding-spec = { workspace = true }
